--- a/IRTool/MainWindow.xaml
+++ b/IRTool/MainWindow.xaml
@@ -5,8 +5,60 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IRTool"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="MainWindow" Height="617.11" Width="1037.6"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="16"
+        TextOptions.TextFormattingMode="Ideal" 
+        TextOptions.TextRenderingMode="Auto"        
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{DynamicResource MaterialDesignFont}" WindowStyle="None" WindowStartupLocation="CenterScreen">
+    <Grid Margin="0,0,0,25.6">
+        <materialDesign:Card Padding="36" Margin="16,16,200,95" VerticalAlignment="Stretch" FontSize="22">
+            <TextBlock Style="{DynamicResource MaterialDesignTitleTextBlock}" Text="欢迎使用新创达IR机器人调试工具!&#x000A;使用说明请按帮助按钮!" FontFamily="FangSong"/>
+        </materialDesign:Card>
+
+
+        <GroupBox Header="点位操作" Margin="0,30,16,0" Height="360" Width="360" HorizontalAlignment="Right" VerticalAlignment="Top">
+            <Grid>
+                <Button Content="读取点位" HorizontalAlignment="Right" Margin="0,4,16,0" VerticalAlignment="Top" Width="120" Height="50" FontSize="18"/>
+                <Button Content="学习点位" HorizontalAlignment="Right" Margin="0,80,16,0" VerticalAlignment="Top" Width="120" Height="50" FontSize="18"/>
+                <Button Content="移动" HorizontalAlignment="Right" Margin="0,160,16,0" VerticalAlignment="Top" Width="120" Height="50" FontSize="18"/>
+
+                <Label Content="索引号" HorizontalAlignment="Left" Height="40" Margin="10,4,0,0" VerticalAlignment="Top" FontSize="18" Width="70"/>
+                <local:NumbericTextBox HorizontalAlignment="Left" Margin="80, 4, 0, 0" TextWrapping="Wrap" Text="1"  InputMethod.IsInputMethodEnabled="False" VerticalAlignment="Top" TextAlignment="Center" Height="27" Width="70" FontSize="18" MinValue="0" MaxValue="25"/>
+
+                <Label Content="出" HorizontalAlignment="Left" Height="40" Margin="36,52,0,0" VerticalAlignment="Top" FontSize="20" Width="40"/>
+                <ToggleButton  Style="{DynamicResource MaterialDesignSwitchToggleButton}" HorizontalAlignment="Left" Margin="56,50,0,0" VerticalAlignment="Top" Width="80" Height="40" FontSize="22"/>
+                <Label Content="进" HorizontalAlignment="Left" Height="40" Margin="116,52,0,0" VerticalAlignment="Top" FontSize="20" Width="40"/>
+
+                <Label Content="低" HorizontalAlignment="Left" Height="40" Margin="36,102,0,0" VerticalAlignment="Top" FontSize="20" Width="40"/>
+                <ToggleButton  Style="{DynamicResource MaterialDesignSwitchToggleButton}" HorizontalAlignment="Left" Margin="56,100,0,0" VerticalAlignment="Top" Width="80" Height="40" FontSize="22"/>
+                <Label Content="高" HorizontalAlignment="Left" Height="40" Margin="116,102,0,0" VerticalAlignment="Top" FontSize="20" Width="40"/>
+
+                <Button Content="抓" Margin="16,170,0,0" VerticalAlignment="Top" Height="35" FontSize="18" HorizontalAlignment="Left" Width="70"/>
+                <Button Content="放" Margin="106,170,0,0" VerticalAlignment="Top" Height="35" FontSize="18" HorizontalAlignment="Left" Width="70"/>
+
+                <Label Content="点位选择" HorizontalAlignment="Left" Height="40" Margin="10,242,0,0" VerticalAlignment="Top" FontSize="18" Width="100"/>
+                <local:AutoCompleteTextBox  x:Name="IrStationTextBox" Height="40" Width="220"  Margin="96, 220,0,0"  HorizontalAlignment="Left" Text="" />
+            </Grid>
+        </GroupBox>
+
+        <Label Content="地址" Height="40" Margin="0,435,325,0" VerticalAlignment="Top" FontSize="20" HorizontalAlignment="Right" Width="50"/>
+        <TextBox Margin="0,425,170,0" TextWrapping="Wrap" Text="192.168.100.33"  InputMethod.IsInputMethodEnabled="False" VerticalAlignment="Top" TextAlignment="Center" Height="40" FontSize="18" HorizontalAlignment="Right" Width="150"/>
+        <Button Content="连接" IsEnabled="True" HorizontalAlignment="Right" Margin="0,420,26,0" VerticalAlignment="Top" Width="120" Height="50" FontSize="18"/>
+
+        <Button Content="退出" Style="{DynamicResource MaterialDesignRaisedAccentButton}" HorizontalAlignment="Right" Margin="0,500,26,0" VerticalAlignment="Top" Width="120" Height="50" Background="#FFEA0000" FontSize="18"/>
+        <Button Content="帮助" Style="{DynamicResource MaterialDesignRaisedLightButton}" HorizontalAlignment="Right" Margin="0,500,240,0" VerticalAlignment="Top" Width="120" Height="50" FontSize="18"/>
+
+        <Label Content="命令" HorizontalAlignment="Left" Height="30" Margin="36,510,0,0" VerticalAlignment="Top" FontSize="20" Width="50"/>
+        <local:AutoCompleteTextBox x:Name="IrSendTextBox" Height="40" Width="350"  Margin="100,465,0,0" Text="" HorizontalAlignment="Left" />
+        <Button Content="发送" IsEnabled="True" Margin="520,500,0,0" VerticalAlignment="Top" Height="50" FontSize="18" HorizontalAlignment="Left" Width="120"/>
+
+        <Label Content="路径" HorizontalAlignment="Left" Margin="38,440,0,0" Height="30" VerticalAlignment="Top" FontSize="18"/>
+        <TextBox x:Name="IrScriptFilePath" Margin="100,425,0,0" TextWrapping="Wrap" Text="" IsReadOnly="True" FontSize="18" HorizontalAlignment="Left" Width="200" Height="40" VerticalAlignment="Top"/>
+        <Button x:Name="IrFilePath" Content="选择文件" HorizontalAlignment="Left" Margin="355,425,0,0" Width="90" Height="40" VerticalAlignment="Top"/>
+        <Button x:Name="IrSendFile" Content="执行文件" HorizontalAlignment="Left" Margin="505,425,0,0" Width="90" Height="40" VerticalAlignment="Top"/>
     </Grid>
 </Window>
