--- a/IRTool/MainWindow.xaml
+++ b/IRTool/MainWindow.xaml
@@ -16,7 +16,7 @@
         FontFamily="{DynamicResource MaterialDesignFont}" WindowStyle="None" WindowStartupLocation="CenterScreen">
     <Grid Margin="0,0,0,25.6">
         <materialDesign:Card Padding="36" Margin="16,16,200,95" VerticalAlignment="Stretch" FontSize="22">
-            <TextBox x:Name="IrMsgsBox" Margin="1,1,4,5" Text="欢迎使用新创达IR机器人调试工具!&#x000A;使用说明请按帮助按钮!&#x000A;" FontFamily="FangSong" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Auto" IsReadOnly="True" FontSize="16" VerticalContentAlignment="Top" HorizontalContentAlignment="Center" TextDecorations="{x:Null}" HorizontalScrollBarVisibility="Auto" TextAlignment="Justify"/>
+            <TextBox x:Name="IrMsgsBox" Margin="1,1,4,5" Text="欢迎使用新创达IR机器人调试工具!&#x000A;使用说明请按帮助按钮!&#x000A;" FontFamily="FangSong" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Auto" IsReadOnly="True" FontSize="16" VerticalContentAlignment="Top" HorizontalContentAlignment="Left" TextDecorations="{x:Null}" HorizontalScrollBarVisibility="Auto" TextAlignment="Justify"/>
         </materialDesign:Card>
 
 
@@ -63,6 +63,6 @@
         <Label Content="路径" HorizontalAlignment="Left" Margin="38,440,0,0" Height="30" VerticalAlignment="Top" FontSize="18"/>
         <TextBox x:Name="IrScriptFilePath" Margin="100,425,0,0" TextWrapping="Wrap" Text="" IsReadOnly="True" FontSize="12" HorizontalAlignment="Left" Width="200" Height="40" VerticalAlignment="Top"/>
         <Button x:Name="IrFilePath" Content="选择文件" HorizontalAlignment="Left" Margin="355,425,0,0" Width="90" Height="40" VerticalAlignment="Top" Click="IrFilePath_Click"/>
-        <Button x:Name="IrSendFile" IsEnabled="False" Content="执行文件" HorizontalAlignment="Left" Margin="505,425,0,0" Width="90" Height="40" VerticalAlignment="Top"/>
+        <Button x:Name="IrSendFile" IsEnabled="False" Content="执行文件" HorizontalAlignment="Left" Margin="505,425,0,0" Width="90" Height="40" VerticalAlignment="Top"  Click="IrSendFile_Click"/>
     </Grid>
 </Window>
