--- a/IRTool/MainWindow.xaml
+++ b/IRTool/MainWindow.xaml
@@ -22,27 +22,27 @@
 
         <GroupBox Header="点位操作" Margin="0,30,16,0" Height="360" Width="360" HorizontalAlignment="Right" VerticalAlignment="Top">
             <Grid>
-                <Button Content="读取点位" HorizontalAlignment="Right" Margin="0,4,16,0" VerticalAlignment="Top" Width="120" Height="50" FontSize="18"/>
-                <Button Content="学习点位" HorizontalAlignment="Right" Margin="0,80,16,0" VerticalAlignment="Top" Width="120" Height="50" FontSize="18"/>
-                <Button Content="移动" HorizontalAlignment="Right" Margin="0,160,16,0" VerticalAlignment="Top" Width="120" Height="50" FontSize="18"/>
+                <Button x:Name="IrReadStation" Content="读取点位" HorizontalAlignment="Right" Margin="0,4,16,0" VerticalAlignment="Top" Width="120" Height="50" FontSize="18"/>
+                <Button x:Name="IrLearnStation" Content="学习点位" HorizontalAlignment="Right" Margin="0,80,16,0" VerticalAlignment="Top" Width="120" Height="50" FontSize="18" Click="IrLearnStation_Click"/>
+                <Button x:Name="IrMoveStation" Content="移动" HorizontalAlignment="Right" Margin="0,160,16,0" VerticalAlignment="Top" Width="120" Height="50" FontSize="18" Click="IrMoveStation_Click"/>
 
                 <Label Content="索引号" HorizontalAlignment="Left" Height="40" Margin="10,4,0,0" VerticalAlignment="Top" FontSize="18" Width="70"/>
-                <local:NumbericTextBox HorizontalAlignment="Left" Margin="80, 4, 0, 0" TextWrapping="Wrap" Text="1"  InputMethod.IsInputMethodEnabled="False" VerticalAlignment="Top" TextAlignment="Center" Height="27" Width="70" FontSize="18" MinValue="1" MaxValue="25"/>
+                <local:NumbericTextBox x:Name="IrIndex" HorizontalAlignment="Left" Margin="80, 4, 0, 0" TextWrapping="Wrap" Text="1"  InputMethod.IsInputMethodEnabled="False" VerticalAlignment="Top" TextAlignment="Center" Height="27" Width="70" FontSize="18" MinValue="1" MaxValue="25"/>
 
                 <Label Content="出" HorizontalAlignment="Left" Height="40" Margin="36,52,0,0" VerticalAlignment="Top" FontSize="20" Width="40"/>
-                <ToggleButton  Style="{DynamicResource MaterialDesignSwitchToggleButton}" HorizontalAlignment="Left" Margin="56,50,0,0" VerticalAlignment="Top" Width="80" Height="40" FontSize="22"/>
+                <ToggleButton  x:Name="IrIsPerch" IsChecked="False" Style="{DynamicResource MaterialDesignSwitchToggleButton}" HorizontalAlignment="Left" Margin="56,50,0,0" VerticalAlignment="Top" Width="80" Height="40" FontSize="22"/>
                 <Label Content="进" HorizontalAlignment="Left" Height="40" Margin="116,52,0,0" VerticalAlignment="Top" FontSize="20" Width="40"/>
 
                 <Label Content="低" HorizontalAlignment="Left" Height="40" Margin="36,102,0,0" VerticalAlignment="Top" FontSize="20" Width="40"/>
-                <ToggleButton  Style="{DynamicResource MaterialDesignSwitchToggleButton}" HorizontalAlignment="Left" Margin="56,100,0,0" VerticalAlignment="Top" Width="80" Height="40" FontSize="22"/>
+                <ToggleButton  x:Name="IrIsLow" IsChecked="True" Style="{DynamicResource MaterialDesignSwitchToggleButton}" HorizontalAlignment="Left" Margin="56,100,0,0" VerticalAlignment="Top" Width="80" Height="40" FontSize="22"/>
                 <Label Content="高" HorizontalAlignment="Left" Height="40" Margin="116,102,0,0" VerticalAlignment="Top" FontSize="20" Width="40"/>
 
                 <Label Content="速度" HorizontalAlignment="Left" Height="40" Margin="21,152,0,0" VerticalAlignment="Top" FontSize="20" Width="50"/>
                 <TextBlock Text="{Binding ElementName=IrSpeedSlider,Path=Value}" Height="30" Margin="70,145,0,0" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" TextAlignment="Center"/>
                 <Slider x:Name ="IrSpeedSlider" HorizontalAlignment="Left" Height="30" Margin="70,165,0,0" VerticalAlignment="Top" Width="100" Maximum="100" Value="50" Delay="300" SmallChange="1" LargeChange="10" IsSnapToTickEnabled="True" Ticks="5 10 15 20 25 30 35 40 45 50 55 60 65 70 75 80 85 90 95 100"/>
 
-                <Button Content="抓" Margin="16,200,0,0" VerticalAlignment="Top" Height="35" FontSize="18" HorizontalAlignment="Left" Width="70"/>
-                <Button Content="放" Margin="106,200,0,0" VerticalAlignment="Top" Height="35" FontSize="18" HorizontalAlignment="Left" Width="70"/>
+                <Button x:Name="IrGrip" Content="抓" Margin="16,200,0,0" VerticalAlignment="Top" Height="35" FontSize="18" HorizontalAlignment="Left" Width="70"/>
+                <Button x:Name="IrRelease" Content="放" Margin="106,200,0,0" VerticalAlignment="Top" Height="35" FontSize="18" HorizontalAlignment="Left" Width="70"/>
 
                 <Label Content="点位选择" HorizontalAlignment="Left" Height="40" Margin="10,242,0,0" VerticalAlignment="Top" FontSize="18" Width="100"/>
                 <local:AutoCompleteTextBox  x:Name="IrStationTextBox" Height="40" Width="220"  Margin="96, 220,0,0"  HorizontalAlignment="Left" Text="" />
