--- a/IRTool/MainWindow.xaml
+++ b/IRTool/MainWindow.xaml
@@ -16,7 +16,7 @@
         FontFamily="{DynamicResource MaterialDesignFont}" WindowStyle="None" WindowStartupLocation="CenterScreen">
     <Grid Margin="0,0,0,25.6">
         <materialDesign:Card Padding="36" Margin="16,16,200,95" VerticalAlignment="Stretch" FontSize="22">
-            <TextBox x:Name="IrMsgsBox" Margin="1,1,0,0" Text="欢迎使用新创达IR机器人调试工具!&#x000A;使用说明请按帮助按钮!&#x000A;" FontFamily="FangSong" VerticalScrollBarVisibility="Auto" IsReadOnly="True" FontSize="16" VerticalContentAlignment="Top" HorizontalContentAlignment="Center" TextDecorations="{x:Null}" HorizontalScrollBarVisibility="Auto" TextAlignment="Center" UseLayoutRounding="False" Height="286" VerticalAlignment="Top" HorizontalAlignment="Left" Width="583"/>
+            <TextBox x:Name="IrMsgsBox" Margin="1,1,0,0" Text="欢迎使用新创达IR机器人调试工具!&#x000A;使用说明请按帮助按钮!&#x000A;" FontFamily="FangSong" VerticalScrollBarVisibility="Auto" IsReadOnly="True" FontSize="16" VerticalContentAlignment="Top" HorizontalContentAlignment="Left" TextDecorations="{x:Null}" HorizontalScrollBarVisibility="Auto" TextAlignment="Left" UseLayoutRounding="False" Height="286" VerticalAlignment="Top" HorizontalAlignment="Left" Width="583"/>
         </materialDesign:Card>
 
 
@@ -30,11 +30,11 @@
                 <local:NumbericTextBox x:Name="IrIndex" HorizontalAlignment="Left" Margin="80, 4, 0, 0" TextWrapping="Wrap" Text="1"  InputMethod.IsInputMethodEnabled="False" VerticalAlignment="Top" TextAlignment="Center" Height="27" Width="70" FontSize="18" MinValue="1" MaxValue="25"/>
 
                 <Label Content="出" HorizontalAlignment="Left" Height="40" Margin="36,52,0,0" VerticalAlignment="Top" FontSize="20" Width="40"/>
-                <ToggleButton  x:Name="IrIsPerch" IsChecked="False" Style="{DynamicResource MaterialDesignSwitchToggleButton}" HorizontalAlignment="Left" Margin="56,50,0,0" VerticalAlignment="Top" Width="80" Height="40" FontSize="22"/>
+                <ToggleButton  x:Name="IrIsInside" IsChecked="False" Style="{DynamicResource MaterialDesignSwitchToggleButton}" HorizontalAlignment="Left" Margin="56,50,0,0" VerticalAlignment="Top" Width="80" Height="40" FontSize="22"/>
                 <Label Content="进" HorizontalAlignment="Left" Height="40" Margin="116,52,0,0" VerticalAlignment="Top" FontSize="20" Width="40"/>
 
                 <Label Content="低" HorizontalAlignment="Left" Height="40" Margin="36,102,0,0" VerticalAlignment="Top" FontSize="20" Width="40"/>
-                <ToggleButton  x:Name="IrIsLow" IsChecked="True" Style="{DynamicResource MaterialDesignSwitchToggleButton}" HorizontalAlignment="Left" Margin="56,100,0,0" VerticalAlignment="Top" Width="80" Height="40" FontSize="22"/>
+                <ToggleButton  x:Name="IrIsHigh" IsChecked="True" Style="{DynamicResource MaterialDesignSwitchToggleButton}" HorizontalAlignment="Left" Margin="56,100,0,0" VerticalAlignment="Top" Width="80" Height="40" FontSize="22"/>
                 <Label Content="高" HorizontalAlignment="Left" Height="40" Margin="116,102,0,0" VerticalAlignment="Top" FontSize="20" Width="40"/>
 
                 <Label Content="速度" HorizontalAlignment="Left" Height="40" Margin="21,152,0,0" VerticalAlignment="Top" FontSize="20" Width="50"/>
