--- a/IRTool/AutoCompleteTextBox.xaml
+++ b/IRTool/AutoCompleteTextBox.xaml
@@ -1,4 +1,4 @@
-﻿<Canvas x:Class="IRTool.AutoCompleteTextBox"
+﻿<Canvas x:Class="IrTool.AutoCompleteTextBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Height="30" Width="300">
 </Canvas>
